# cpp-coverage-test

./: .gitignore  CMakeLists.txt  README.md  helper.cpp  helper.h  main.cpp  run-coverage.ps1  run-coveralls-coverage.ps1  run-gcovr-coverage-cmake.ps1  run-gcovr-coverage.ps1
cicd/: azure-pipelines.yml  check-coverage.yml
